Fix search box on mobile

--- a/shared/components/AppBar.less
+++ b/shared/components/AppBar.less
@@ -65,6 +65,9 @@
     flex: 2;
 
     @media @phone {
+        max-width: 50px;
+        flex: 0;
+
         .AppBar__menu-item {
             display: none;
         }
@@ -78,7 +81,7 @@
 
     @media @phone {
         justify-content: flex-end;
-        flex: 1;
+        flex: 2;
     }
 
     @media @large {
